# slack-notifier

./: README.md  docker-compose.yml  main.py  pyproject.toml
